# budgetbench

./: .gitignore  ARCHITECTURE.md  README.md  run.sh
backend/: .env.example  README.md  pyproject.toml
backend/fixtures/replay/: bob.jsonl  copilot.jsonl
backend/frontend/static/: app.js  diff_render.js  style.css
backend/frontend/templates/: index.html  report.html
backend/scenarios/01-sqli-flask/: ground-truth.yaml  prompt.txt  verify.sh
backend/scenarios/01-sqli-flask/recordings/: bob.jsonl  claude.jsonl  copilot.jsonl
backend/scenarios/02-eng-legacy-refactor/: ground-truth.yaml  prompt.txt
backend/scenarios/03-fin-payroll-tax/: ground-truth.yaml  prompt.txt  verify.sh
backend/scenarios/04-data-etl-parse/: ground-truth.yaml  prompt.txt
backend/scripts/: gen_recordings.py  scaffold_scenarios.py  seed.py
backend/src/: cli.py  display_labels.py  orchestrator.py  server.py
backend/src/analytics/: __init__.py  executive.py  rollups.py
backend/src/models/: run_result.py
backend/src/pa/: __init__.py  client.py  mock_tm1.py
backend/src/parsers/: __init__.py  bob_parser.py  claude_parser.py  copilot_parser.py
backend/src/pricing/: calculator.py  rates.yaml  refresh.py
backend/src/runners/: base.py  bob.py  claude.py  copilot.py  resolve.py  simulated.py
backend/src/scoring/: objective_verifier.py  summary_extractor.py
backend/src/storage/: db.py  orgs.py
backend/tests/: test_objective_verifier.py  test_parsers.py  test_pricing.py  test_summary_extractor.py
backend/tests/fixtures/: bob_stream.out  claude_json.out  claude_stream.out
(+67 files in other folders)
